--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <script src="swtparser.js"></script>
     <script src="swt2jsonConverter.js"></script>
+    <script src="tournamentDataLoader.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
